tests/golden/type_errors/while_body_scope_escape.cd
while true {
  let x = 1;
}
print x;
